--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# Ignore all idea project settings, comment those lines if you need project specific stuff
+#**/.idea/*
+#*.iml
+
 # User-specific stuff:
 **/.idea/**/workspace.xml
 **/.idea/**/tasks.xml
@@ -14,7 +18,6 @@
 **/.idea/**/sqlDataSources.xml
 **/.idea/**/dynamic.xml
 **/.idea/**/uiDesigner.xml
-**/.idea/**/vcs.xml
 
 # Gradle:
 **/.idea/**/gradle.xml
